--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ google-auth==2.17.2
 google-auth-oauthlib==1.0.0
 google-pasta==0.2.0
 grpcio==1.53.0
+gunicorn==20.1.0
 h5py==3.8.0
 idna==3.4
 jax==0.4.8
@@ -38,7 +39,7 @@ sqlparse==0.4.3
 tensorboard==2.12.1
 tensorboard-data-server==0.7.0
 tensorboard-plugin-wit==1.8.1
-tensorflow==2.12.0
+tensorflow-cpu==2.12.0
 tensorflow-estimator==2.12.0
 tensorflow-intel==2.12.0
 tensorflow-io-gcs-filesystem==0.31.0
