--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,9 @@ astunparse==1.6.3
 cachetools==5.3.0
 certifi==2022.12.7
 charset-normalizer==3.1.0
+dj-database-url==1.3.0
 Django==4.2
+django-heroku==0.3.1
 djangorestframework==3.14.0
 flatbuffers==23.3.3
 gast==0.4.0
@@ -27,6 +29,7 @@ opt-einsum==3.3.0
 packaging==23.0
 Pillow==9.5.0
 protobuf==4.22.1
+psycopg2==2.9.6
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pytz==2023.3
@@ -41,10 +44,12 @@ tensorboard-data-server==0.7.0
 tensorboard-plugin-wit==1.8.1
 tensorflow-cpu==2.12.0
 tensorflow-estimator==2.12.0
+tensorflow-intel==2.12.0
 tensorflow-io-gcs-filesystem==0.31.0
 termcolor==2.2.0
 typing_extensions==4.5.0
 tzdata==2023.3
 urllib3==1.26.15
 Werkzeug==2.2.3
+whitenoise==6.4.0
 wrapt==1.14.1
